hopefully fix horizontal font size on ios?

--- a/stylus/layouts/body.styl
+++ b/stylus/layouts/body.styl
@@ -4,7 +4,7 @@
 body,
 html,
 :root {
-    background-color #fafafa
+    background-color #f6f3f3
     color fogra29
     font-smooth always
     -webkit-font-smoothing antialiased
